# dot-service

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  server.py
api/templates/: index.html
geometry/: __init__.py  algorithms.py  index.py  types.py  wkt.py
storage/: __init__.py  repository.py
tests/: test_all.py
