[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polygon-service"
version = "1.0.0"
description = "In-memory polygon service with point-in-polygon queries"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
polygon-service = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["geometry*", "storage*", "api*"]
